@@ -4,8 +4,15 @@ license = Artistic_2_0
 copyright_holder = Dan Book
 copyright_year   = 2015
 
+; Gather profile skeleton separately so dotfiles are included
+[Git::GatherDir / GatherDotFiles]
+root = profiles/default/skel
+prefix = profiles/default/skel
+include_dotfiles = 1
+
 [@Author::DBOOK]
 pod_tests = syntax
+Git::GatherDir.exclude_match = ^profiles/default/skel/
 
 [ModuleShareDirs]
 Dist::Zilla::MintingProfile::Author::DBOOK = profiles
