@@ -2,7 +2,7 @@ package Dist::Zilla::PluginBundle::Author::DBOOK;
 
 use Moose;
 use Scalar::Util 'blessed';
-with 'Dist::Zilla::Role::PluginBundle::Easy';
+with 'Dist::Zilla::Role::PluginBundle::Easy', 'Dist::Zilla::Role::PluginBundle::Config::Slicer';
 
 our $VERSION = '0.010';
 
@@ -162,6 +162,10 @@ the upload to CPAN.
  $ FAKE_RELEASE=1 dzil release
 
 =head1 OPTIONS
+
+This bundle composes the L<Dist::Zilla::Role::PluginBundle::Config::Slicer>
+role, so options for any included plugin may be specified in that format.
+Additionally, the following options are provided.
 
 =head2 github_user
 
