@@ -6,29 +6,7 @@ append_file = plugins.ini
 
 [GatherDir::Template]
 root = skel
-
-[GenerateFile / Generate-gitignore]
-filename = .gitignore
-is_template = 1
-content = /blib/
-content = /.build/
-content = _build/
-content = cover_db/
-content = inc/
-content = Build
-content = !Build/
-content = Build.bat
-content = .last_cover_stats
-content = /Makefile
-content = /Makefile.old
-content = /MANIFEST.bak
-content = /MYMETA.*
-content = nytprof.out
-content = /pm_to_blib
-content = *.o
-content = *.bs
-content = /_eumm/
-content = /{{$dist->name}}-*
+include_dotfiles = 1
 
 [License]
 
